Create/edit only for authorized users, some fixes
